--- a/app/src/main/res/layout/activity_boleta_act.xml
+++ b/app/src/main/res/layout/activity_boleta_act.xml
@@ -8,8 +8,8 @@
     tools:context=".boleta_act">
 
     <LinearLayout
-        android:layout_width="341dp"
-        android:layout_height="316dp"
+        android:layout_width="355dp"
+        android:layout_height="372dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,7 +20,7 @@
         <EditText
             android:id="@+id/ed_boleta"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="55dp"
             android:ems="10"
             android:hint="Nro Boleta"
             android:inputType="textPersonName" />
@@ -33,7 +33,7 @@
         <EditText
             android:id="@+id/ed_cliente"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="55dp"
             android:ems="10"
             android:hint="Cliente"
             android:inputType="textPersonName" />
@@ -46,7 +46,7 @@
         <EditText
             android:id="@+id/ed_producto"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="55dp"
             android:ems="10"
             android:hint="Producto"
             android:inputType="textPersonName" />
@@ -57,11 +57,25 @@
             android:layout_height="wrap_content" />
 
         <EditText
+            android:id="@+id/ed_costo"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:ems="10"
+            android:hint="Costo"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/espacio4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <EditText
             android:id="@+id/ed_direccion"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="55dp"
             android:ems="10"
             android:hint="Direccion de entrega"
             android:inputType="textPersonName" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
