cree la inteligencia de la clase pizzas agrege el video a la clase informacion cree la clase AdminSQLiteOpenHelper

--- a/app/src/main/res/layout/activity_boleta_act.xml
+++ b/app/src/main/res/layout/activity_boleta_act.xml
@@ -78,4 +78,50 @@
             android:inputType="textPersonName" />
 
     </LinearLayout>
+
+    <TableLayout
+        android:layout_width="309dp"
+        android:layout_height="109dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.922">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btn_guardar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Guardar" />
+
+            <Button
+                android:id="@+id/btn_actualizar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Actualizar" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btn_mostrar"
+                android:layout_width="154dp"
+                android:layout_height="match_parent"
+                android:text="Mostrar" />
+
+            <Button
+                android:id="@+id/btn_eliminar"
+                android:layout_width="154dp"
+                android:layout_height="match_parent"
+                android:text="Eliminar" />
+        </TableRow>
+
+    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
